# ABProgramming-RBC

./: ABProgramming RBC.cpp  ABProgramming RBC.h  AgendaVirtualRBC.ipynb  CMakeLists.txt  HistorialClinico.cpp  HistorialClinico.h  Medico.cpp  Nvidia_data.ipynb  Paciente.cpp  Paciente.h
data/: Citas.csv  Medicos.csv  Pacientes.csv
enc_temp_folder/e59d7e99c342d9909faad3fee1877/: Gestion.cpp
include/: Cita.hpp  FileManager.hpp  Gestion.hpp  HistorialClinico.hpp  Medico.hpp  Paciente.hpp
src/: ABProgramming RBC.cpp  Cita.cpp  FileManager.cpp  Gestion.cpp  HistorialClinico.cpp  Medico.cpp  Paciente.cpp
